--- a/package.json
+++ b/package.json
@@ -8,26 +8,32 @@
     "infra"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "build:lambdas": "npm run build --workspaces --if-present lambdas/*",
-    "build:infra": "npm run build -w infra",
+    "build": "tsc && npm run build:lambdas",
+    "build:lambdas": "cd lambdas/ingestSensorData && npm install && npm run build && cd ../.. && cd lambdas/getEquipmentMetrics && npm install && npm run build && cd ../.. && cd lambdas/getEquipmentStatus && npm install && npm run build && cd ../.. && cd lambdas/ultraFastAlerts && npm install && npm run build && cd ../..",
+    "build:infra": "cd cdk && npm install && npm run build && cd ..",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch", 
     "test:coverage": "jest --coverage",
-    "clean": "npm run clean --workspaces --if-present",
+    "test:api": "./scripts/test.sh",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:quick": "npm run build && cd cdk && cdk deploy --require-approval never",
+    "cleanup": "./scripts/cleanup.sh",
+    "clean": "rm -rf dist/ && rm -rf cdk/cdk.out/ && rm -rf lambdas/*/dist/ && rm -rf node_modules/ && rm -rf cdk/node_modules/ && rm -rf lambdas/*/node_modules/",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
-    "deploy:infra": "npm run deploy -w infra",
-    "deploy:lambdas": "npm run deploy --workspaces lambdas/*",
-    "synth": "npm run synth -w infra",
+    "docs": "echo 'Documentation: ./API.md, ./DEPLOYMENT.md, ./CLEANUP_SUMMARY.md'",
+    "status": "aws cloudformation describe-stacks --stack-name ManufacturingPlatform-development --query 'Stacks[0].{Status:StackStatus,Outputs:Outputs[*].{Key:OutputKey,Value:OutputValue}}' --output table || echo 'Stack not deployed'",
+    "logs": "aws logs tail /aws/lambda/ManufacturingPlatform-develo-WebhookLambda --follow",
     "prepare": "husky install"
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.450.0",
     "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/client-secrets-manager": "^3.450.0",
     "@aws-sdk/client-sns": "^3.450.0",
+    "@aws-sdk/client-sts": "^3.450.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "tslib": "^2.6.2"
@@ -38,7 +44,6 @@
     "@types/pg": "^8.10.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "aws-sdk": "^2.1692.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
