--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,107 @@ secrets/
 # CloudFormation templates (generated)
 *.template.json
 *.template.yaml
+/tmp/template.yaml
+
+# TypeScript compiled files
+*.js
+*.d.ts
+*.js.map
+*.d.ts.map
+!*.config.js
+!jest.config.js
+!scripts/*.js
+!cdk/deploy.sh
+!lambdas/*/setup*.sh
+!run-local.sh
+
+# CDK specific
+cdk.out/
+cdk.context.json
+.cdk.staging/
+*.assets.json
+*.template.json
+*.template.yaml
+
+# Lock files (keep package-lock.json in root but ignore in subdirs)
+/node_modules/*/package-lock.json
+yarn.lock
+
+# Lambda deployment packages and layers
+*.zip
+lambda-layers/
+deployment-packages/
+dist_backup/
+dist/
+
+# Template files
+template.yaml
+!cdk/lib/*.template.ts
+
+# AWS SAM
+.aws-sam/
+samconfig.toml
+
+# Local development
+.vscode/settings.json
+.vscode/launch.json
+local-config.json
+dev-config.json
+
+# Test artifacts
+coverage/
+*.lcov
+junit.xml
+test-results/
+.nyc_output
+
+# Documentation build
+docs/_build/
+docs/.doctrees/
+
+# MacOS
+.DS_Store
+.DS_Store?
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+
+# Linux
+*~
+.directory
+
+# Backup and temporary files
+*.backup
+*.bak
+*.tmp
+*.temp
+*.orig
+*.swp
+*.swo
+
+# IDE and editor files
+.vscode/
+.idea/
+*.sublime-*
+.brackets.json
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# Generated documentation
+docs/_build/
+docs/.doctrees/
+
+# Ignore all .js files in TypeScript projects except specific ones
+**/*.js
+!jest.config.js
+!*.config.js
+!deploy.sh
+!setup*.sh
+!run-local.sh
+!scripts/**/*.js
+
+# CDK template outputs
+/tmp/
