--- a/lambdas/ingestSensorData/package.json
+++ b/lambdas/ingestSensorData/package.json
@@ -11,21 +11,22 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@aws-sdk/client-kafka": "^3.450.0",
-    "@aws-sdk/client-sns": "^3.450.0",
     "@aws-sdk/client-cloudwatch": "^3.450.0",
+    "@aws-sdk/client-kafka": "^3.450.0",
     "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/client-sns": "^3.450.0",
+    "@aws-sdk/client-sts": "^3.936.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
